Fix scrollbar behavior

--- a/index.scss
+++ b/index.scss
@@ -136,7 +136,7 @@ body, html {
     // border: 1px solid #eee;
     height: 0;
     flex-grow: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .history-card {
